--- a/index.html
+++ b/index.html
@@ -6,5 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Full page animation</title>
   </head>
-  <body></body>
+  <body>
+    <div id="fullpage">
+      <section class="section s1">
+        <h1>Home Decoration</h1>
+      </section>
+      <section class="section s2">
+        <h1>Different Styles</h1>
+        <div class="description">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nulla
+            voluptatibus voluptate numquam modi accusantium iste exercitationem
+            iusto officiis minima, pariatur totam excepturi aperiam reiciendis
+            vitae perspiciatis? Magni, nulla fugit?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
+            veritatis modi adipisci magni ab omnis vitae iusto id alias placeat
+            dolorem? Aliquam aperiam, magnam cupiditate quidem minus obcaecati
+            maiores eaque!
+          </p>
+        </div>
+        <img src="./img/chair2.png" alt="chair" class="chair" />
+        <img src="./img/chair3.png" alt="chair" class="chair" />
+        <img src="./img/chair1.png" alt="chair" class="chair" />
+      </section>
+      <section class="section s3">
+        <h1>Other</h1>
+      </section>
+    </div>
+  </body>
 </html>
