--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="fullpage.min.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Full page animation</title>
   </head>
   <body>
@@ -35,5 +37,7 @@
         <h1>Other</h1>
       </section>
     </div>
+    <script src="./fullpage.min.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
