--- a/index.html
+++ b/index.html
@@ -18,16 +18,9 @@
         <div class="description">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nulla
-            voluptatibus voluptate numquam modi accusantium iste exercitationem
-            iusto officiis minima, pariatur totam excepturi aperiam reiciendis
-            vitae perspiciatis? Magni, nulla fugit?
+            aperiam reiciendis vitae perspiciatis?
           </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-            veritatis modi adipisci magni ab omnis vitae iusto id alias placeat
-            dolorem? Aliquam aperiam, magnam cupiditate quidem minus obcaecati
-            maiores eaque!
-          </p>
+          <p>Aliquam aperiam, cupiditate quidem minus obcaecati eaque!</p>
         </div>
         <img src="./img/chair2.png" alt="chair" class="chair" />
         <img src="./img/chair3.png" alt="chair" class="chair" />
